@@ -465,6 +465,9 @@ AC_CACHE_CHECK([whether deplibs are loaded by dlopen],
       ;;
     esac
     ;;
+  bitrig*)
+    lt_cv_sys_dlopen_deplibs=yes
+    ;;
   darwin*)
     # Assuming the user has installed a libdl from somewhere, this is true
     # If you are looking for one http://www.opendarwin.org/projects/dlcompat
